add route for db schedules is backend
