# backend/server/api_default.go
@@ -72,6 +72,12 @@ func (c *DefaultApiController) Routes() Routes {
 			"/schedule",
 			c.ScheduleGet,
 		},
+		{
+			"DbScheduleGet",
+			strings.ToUpper("Get"),
+			"/db-schedule",
+			c.DbScheduleGet,
+		},
 	}
 }
 
@@ -171,6 +177,18 @@ func (c *DefaultApiController) ScheduleGet(w http.ResponseWriter, r *http.Reques
 	w.Header().Add("Access-Control-Allow-Methods", "POST")
 
 	result, err := c.service.ScheduleGet(r.Context())
+	//If an error occured, encode the error with the status code
+	if err != nil {
+		EncodeJSONResponse(err.Error(), &result.Code, w)
+		return
+	}
+	//If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+}
+
+// DbScheduleGet - Returns the schedule as found in the db.
+func (c *DefaultApiController) DbScheduleGet(w http.ResponseWriter, r *http.Request) {
+	result, err := c.service.DbScheduleGet(r.Context())
 	//If an error occured, encode the error with the status code
 	if err != nil {
 		EncodeJSONResponse(err.Error(), &result.Code, w)
